[tool.poetry]
name = "inable-ai"
version = "0.1.0"
description = ""
authors = ["ganada"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
langchain-aws = "^0.1.11"
langchain-core = "^0.2.22"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
boto3 = "^1.34.145"
opensearch-py = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"